--- a/src/pages/LandingPage/styles.module.scss
+++ b/src/pages/LandingPage/styles.module.scss
@@ -10,6 +10,7 @@
 
     .title {
         position: relative;
+        padding: 0;
     }
 
     .demo {
@@ -17,6 +18,7 @@
         overflow: hidden;
 
         .image {
+            display: inline-block;
             position: relative;
             max-width: 50%;
             max-height: 50%;
@@ -38,11 +40,10 @@
         .button {
             display: block;
             border-radius: 15px;
-            background-color: black;
+            background-color: #D24D57;
             border: none;
             color: #FFFFFF;
             text-align: center;
-            font-size: 25px;
             padding: 20px;
             transition: all 0.5s;
             cursor: pointer;
