Added Authenication Page

--- a/src/pages/LandingPage/styles.module.scss
+++ b/src/pages/LandingPage/styles.module.scss
@@ -48,6 +48,7 @@
             transition: all 0.5s;
             cursor: pointer;
             margin: 30px 15px;
+            text-decoration: double;
         }
 
         .button span {
