--- a/src/pages/LandingPage/styles.module.scss
+++ b/src/pages/LandingPage/styles.module.scss
@@ -1,79 +1,79 @@
 .container {
-    position: absolute;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+
+  .title {
+    position: relative;
     padding: 0;
-    margin: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  }
+
+  .demo {
+    position: relative;
+    overflow: hidden;
+
+    .image {
+      display: inline-block;
+      position: relative;
+      max-width: 50%;
+      max-height: 50%;
+      background-color: #fff;
+      box-shadow: 0px 5px 10px 0px black;
+      border: 5px solid black;
+      border-radius: 20px;
+    }
+  }
+
+  .menu {
+    background-color: white;
+    box-shadow: -2px 0px 2px 0px whitesmoke;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 
-    .title {
-        position: relative;
-        padding: 0;
+    .button {
+      display: block;
+      border-radius: 15px;
+      background-color: #d24d57;
+      border: none;
+      color: #ffffff;
+      text-align: center;
+      padding: 20px;
+      transition: all 0.5s;
+      cursor: pointer;
+      margin: 30px 15px;
+      text-decoration: double;
     }
 
-    .demo {
-        position: relative;
-        overflow: hidden;
-
-        .image {
-            display: inline-block;
-            position: relative;
-            max-width: 50%;
-            max-height: 50%;
-            background-color: #fff;
-            box-shadow: 0px 5px 10px 0px black;
-            border: 5px solid black;
-            border-radius: 20px;
-        }
+    .button span {
+      cursor: pointer;
+      display: inline-block;
+      position: relative;
+      transition: 0.5s;
     }
 
-    .menu {
-        background-color: white;
-        box-shadow: -2px 0px 2px 0px whitesmoke;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-
-        .button {
-            display: block;
-            border-radius: 15px;
-            background-color: #D24D57;
-            border: none;
-            color: #FFFFFF;
-            text-align: center;
-            padding: 20px;
-            transition: all 0.5s;
-            cursor: pointer;
-            margin: 30px 15px;
-            text-decoration: double;
-        }
-
-        .button span {
-            cursor: pointer;
-            display: inline-block;
-            position: relative;
-            transition: 0.5s;
-        }
-        
-        .button span:after {
-            content: '\00bb';
-            position: absolute;
-            opacity: 0;
-            top: 0;
-            right: -20px;
-            transition: 0.5s;
-        }
-
-        .button:hover span {
-            padding-right: 25px;
-        }
-        
-        .button:hover span:after {
-            opacity: 1;
-            right: 0;
-        }
+    .button span:after {
+      content: "\00bb";
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      right: -20px;
+      transition: 0.5s;
     }
+
+    .button:hover span {
+      padding-right: 25px;
+    }
+
+    .button:hover span:after {
+      opacity: 1;
+      right: 0;
+    }
+  }
 }
