--- a/src/components/CardContainer/CourseCard/styles.module.scss
+++ b/src/components/CardContainer/CourseCard/styles.module.scss
@@ -1,14 +1,17 @@
 .container {
+  position: relative;
   border: 2px solid black;
   border-radius: 20px;
   display: block;
   min-width: 100%;
+  max-width: 100px;
   overflow: hidden;
   flex-wrap: wrap;
   margin: 20px auto;
   padding: auto;
 
   .courseTitle {
+    overflow-wrap: anywhere;
     padding: 20px;
     font-size: 35px;
     font-weight: bold;
