--- a/src/pages/Auth/styles.module.scss
+++ b/src/pages/Auth/styles.module.scss
@@ -1,18 +1,15 @@
 .container {
   position: absolute;
-  padding: 0;
-  margin: 0;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  height: 60%;
   text-align: center;
   justify-content: center;
   align-items: center;
-  box-shadow: 1px 2px 2px #592941;
-  border: 0.1em solid #592941;
-  border-radius: 0.5em;
-  background-color: black;
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .banner {
@@ -21,17 +18,14 @@
   justify-content: center;
   align-items: center;
   z-index: 2;
-  right: 65%;
+  right: 75%;
 
-  border: 0.1em solid #592941;
-  border-radius: 0.5em;
-
-  width: 35%;
+  width: 25%;
   height: 100%;
 
   flex-direction: column;
 
-  background-color: rgba(255, 0, 0, 0.3);
+  background-color: rgba(255, 0, 0, 0.5);
   opacity: 1;
 
   color: #eefcf8;
@@ -48,10 +42,7 @@
   z-index: 1;
   right: 0;
 
-  border: 0.1em solid #592941;
-  border-radius: 0.5em;
-
-  width: 65%;
+  width: 75%;
   height: 100%;
 
   background-color: #eefcf8;
@@ -68,7 +59,7 @@
 }
 
 .sendLeft {
-  right: 35%;
+  right: 25%;
 }
 
 .formComp {
