--- a/src/pages/Home/CardContainer/ExtendedCard/styles.module.scss
+++ b/src/pages/Home/CardContainer/ExtendedCard/styles.module.scss
@@ -1,10 +1,9 @@
 .container {
-  position: relative;
+  font-size: 12px;
+  background-color: white;
+  border: 1px solid black;
   border: 2px solid black;
   border-radius: 20px;
-  display: block;
-  min-width: 100%;
-  max-width: 100px;
   overflow: hidden;
   flex-wrap: wrap;
   margin: 20px auto;
