Add Authentication error messages

--- a/src/pages/Auth/SignUp/styles.module.scss
+++ b/src/pages/Auth/SignUp/styles.module.scss
@@ -42,3 +42,11 @@
 .button:hover {
   background-color: #d24d57;
 }
+
+.error {
+  color: red;
+  margin: 0;
+  padding-top: 10px;
+  font-size: 10px;
+  font-weight: lighter;
+}
